<resources>
    <string name="app_name">BloodPressure</string>
    <string name="signature">Signature</string>
    <string name="crazy">Crazy</string>
    <string name="melt">Melt</string>
    <string name="run">Run</string>
    <string name="lazy">Lazy</string>
    <string name="diet">Diet</string>
    <string name="nightmare">Nightmare</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="ENGLISH" translatable="false">English</string>
    <string name="JAPANESE" translatable="false">日本</string>
    <string name="KOREAN" translatable="false">"한국인 "</string>
    <string name="FRENCH" translatable="false">Français</string>
    <string name="ITALIA" translatable="false">Italia</string>
    <string name="GERMAN" translatable="false">Deutsch</string>
    <string name="VIETNAM" translatable="false">Tiếng Việt</string>
    <string name="INDONESIA" translatable="false">Indonesia</string>
    <string name="BRAZIL" translatable="false">Brazil</string>
    <string name="TURKEY" translatable="false">Türkiye</string>
    <string name="SPAIN" translatable="false">España</string>
    <string name="INDIA" translatable="false">भारत</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">Info</string>
    <string name="setting">Setting</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="let_start">Let\'s Start!</string>
    <string name="skip_for_now"><![CDATA[>> Skip for now <<]]></string>
    <string name="title_tool">Blood Pressure Tool</string>
    <string name="content_tool">You can track the Blood Pressure easily and exactly on report.</string>
    <string name="title_health">Graph and Health Report</string>
    <string name="content_health">See the change of your health in every bar graph on it.</string>
    <string name="title_pressure">Blood Pressure Information</string>
    <string name="content_pressure">Give you useful knowledge about blood pressure.</string>
    <string name="max">Max</string>
    <string name="tracker_title">Tracker</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="mmhg">(mmHg)</string>
    <string name="language_title">Language</string>
    <string name="normal_blood_pressure">Normal Blood Pressure</string>
    <string name="elevated_blood_pressure">Elevated Blood Pressure</string>
    <string name="high_blood_pressure_stage_1">High Blood Pressure - Stage 1</string>
    <string name="high_blood_pressure_stage_2">High Blood Pressure - Stage 2</string>
    <string name="dangerous_high_blood_pressure">Dangerously High Blood Pressure</string>
    <string name="blood_pressure_type">Blood Pressure Type:</string>
    <string name="got_it">Got it!</string>
    <string name="less_120"><![CDATA[< 120]]></string>
    <string name="and">AND</string>
    <string name="less_80"><![CDATA[< 80]]></string>
    <string name="in_120_to_129">120-129</string>
    <string name="more_130">130+</string>
    <string name="or">OR</string>
    <string name="more_80">80+</string>
    <string name="more_140">140+</string>
    <string name="more_90">90+</string>
    <string name="more_180">180+</string>
    <string name="condition_normal">SYS &lt; 120 and DIA &lt; 80</string>
    <string name="condition_elevated">SYS 120-129 and DIA &gt; 80</string>
    <string name="condition_high_1">SYS 130+ or DIA 80+</string>
    <string name="condition_high_2">SYS 140+ or DIA 90+</string>
    <string name="condition_dangerously">SYS 180+ or DIA 120+</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="save">Save</string>
    <string name="bp_note">BP Notes</string>
    <string name="edit_add">Edit/add</string>
    <string name="history">History</string>
    <string name="edit_instruction">Long press and drag to reorder</string>
    <string name="add_new">Add new</string>
    <string name="add_note">Add Note</string>
    <string name="cancel">Cancel</string>
    <string name="max_20_character_instruction">Maximum 20 characters.</string>
    <string name="hint">Please enter something</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="delete_confirm">Delete confirm</string>
    <string name="delete_instruction">Are you sure to delete this record?</string>
    <string name="delete">Delete</string>
    <string name="new_record">New Record</string>
    <string name="dupplicate_note">This note is existed</string>
    <string name="setting_title">Setting</string>
    <string name="export_file_setting">Export as file</string>
    <string name="feed_back_setting">Feed back</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="info_title"><![CDATA[Info & Knowledge]]></string>
    <string name="info_1">Some basics about blood pressure</string>
    <string name="info_2">Table to determine the levels of blood pressure</string>
    <string name="info_3">Factors that increase the risk of high blood pressure</string>
    <string name="info_4">Symptoms and complications of high blood pressure</string>
    <string name="info_5">DASH diet for people with hypertension</string>
    <string name="info_6">High blood pressure in pregnancy causes and ways to prevent it</string>
    <string name="info_7">Lower blood pressure through regular exercise every day</string>
    <string name="feed_back_instruction">Please send us some feedback!</string>
    <string name="feed_back_instruction_2">Let us upgrade better functionality and experience for this app. Thanks very much!</string>
    <string name="hint_feedback">Feed back or suggestion</string>
    <string name="the_best_we_can_get">The best we can get ;)</string>
    <string name="oh_no">Oh No!</string>
    <string name="so_amazing">So Amazing!</string>
    <string name="we_like_you_too">We like you too!</string>
    <string name="ask_for_rate">We are working hard for a better user experience. We’d greatly appreciate if you can rate us.</string>
    <string name="expressive_bad">We’re sorry you had a bad experience. Please leave us some feedback.</string>
    <string name="expressive_normal">We would like the opportunity to investigate your feedback further. </string>
    <string name="expressive_bad_a_little">We understand you are not happy with the service you received. Please leave us some feedback.</string>
    <string name="expressive_good">Thank you so much for the wonderful review.</string>
    <string name="expressive_best">Thank you so much for taking the time to leave us your review.</string>
    <string name="rate_on_google_play">Rate On Google Play</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="rate_us_button">Rate Us</string>
    <string name="please_rate">Please rate!</string>
    <string name="min">Min</string>
    <string name="average">Average</string>
    <string name="all_history">All History</string>
    <string name="info_title_1">Some basics about blood pressure</string>
    <string name="info_1_content_1">High blood pressure is a chronic disease where the pressure of the blood against the walls of the arteries is too high. If blood pressure is elevated for a long time, it will put a lot of pressure on the heart, becoming the cause of many serious cardiovascular complications such as: cerebrovascular accident, heart failure, coronary heart disease, myocardial infarction. heart,... However, you can absolutely prevent or treat high blood pressure. Early detection and choosing a heart-healthy lifestyle can prevent high blood pressure from damaging your health.</string>
    <string name="info_1_title_2">What is blood pressure?</string>
    <string name="info_1_title_1">Introduce</string>
    <string name="info_1_content_2">Blood pressure is the pressure exerted on the walls of the arteries to bring blood from the heart to the tissues of the body. Blood pressure is created by the force of contraction of the heart muscle and the resistance of the artery walls. Systolic blood pressure, or systolic blood pressure, is the highest blood pressure in the blood vessels. Systolic blood pressure is the force of blood on the arteries when the heart contracts (the heart is in contraction). Indicated as the greater or upper number in the blood pressure reading. Systolic blood pressure usually varies with age, usually between 90 and 140 mmHg. Diastolic pressure, also known as diastolic blood pressure, is the lowest blood pressure in the blood vessels that occurs between contractions of the heart. Diastolic pressure is the force of blood against the artery walls when the heart relaxes (the heart muscle is relaxed). Indicated as the lower or lower number in the blood pressure reading. Diastolic blood pressure ranges from 50 to 90 mmHg.</string>
    <string name="info_1_title_3">How to determine high blood pressure?</string>
    <string name="info_1_content_3_top">Although it can cause many dangerous complications, the symptoms of high blood pressure are not obvious. The patient may have one or more of the following:\n \u25CF Breathe shallowly.\n \u25CF Headache, dizziness, tinnitus, loss of balance.\n \u25CF Nosebleed.\n \u25CF Chest pain, heart palpitations, palpitations, shortness of breath.\n \u25CF Dizzy.\n \u25CF Eyes blurred.\n \u25CF Red face, nausea, vomiting.\n \u25CF Hematuria.\n \u25CF Insomnia.\n Because there is no one symptom that is considered characteristic of the disease, the most accurate way to know if you have this disease is to have your blood pressure checked regularly at a medical facility or use a blood pressure monitor at home.</string>
    <string name="info_title_2">Table to determine the levels of blood pressure</string>
    <string name="info_2_title_1">Define Blood Pressure</string>
    <string name="info_2_content_1">To determine your blood pressure numbers, you can see the blood pressure category below:</string>
    <string name="info_2_title_2">1. Normal Blood Pressure</string>
    <string name="info_2_content_2">A blood pressure reading below 120/80 mmHg is considered within the normal range. If your results fall into this category, stick to good heart-healthy habits like eating a balanced diet and exercising regularly.</string>
    <string name="info_2_title_3">2. Elevated Blood Pressure</string>
    <string name="info_2_content_3">The systolic reading is between 120 and 129 mmHg and the diastolic reading is less than 80 mmHg. During this stage, doctors usually don\'t treat high blood pressure with medication. Instead, doctors give guidelines that encourage lifestyle changes to improve health.</string>
    <string name="info_2_title_4">3. High Blood Pressure - Stage 1</string>
    <string name="info_2_content_4">Blood pressure always hovers around 140/90 mmHg or higher. At this stage of high blood pressure, doctors may prescribe medication in combination with changes in eating and living habits.</string>
    <string name="info_2_title_5">4. High Blood Pressure - Stage 2</string>
    <string name="info_2_content_5">Blood pressure always fluctuates between 130-139 systolic or 80-89 mmHg diastolic. At this stage, you should change to a healthier lifestyle and consider taking more blood pressure medications.</string>
    <string name="info_2_title_6">5. Dangerously High Blood Pressure</string>
    <string name="info_2_content_6">This stage of hypertension requires medical attention. If your blood pressure reading suddenly exceeds 180/120 mmHg, wait five minutes and then check your blood pressure again. If your readings are still abnormally high, you need to contact your doctor or go to the nearest medical facility to check.</string>
    <string name="info_title_3">Factors that increase the risk of high blood pressure</string>
</resources>