<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboard.FragmentOnboard">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_onboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/dots_indicator"
        app:layout_constraintHeight_percent=".7"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dots_indicator"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/secondary_02"
        app:dotsCornerRadius="@dimen/_4sdp"
        app:dotsSize="@dimen/_8sdp"
        app:dotsSpacing="4dp"
        app:dotsWidthFactor="2.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vp_onboard"
        app:progressMode="true"
        app:selectedDotColor="@color/primary" />

    <LinearLayout
        android:id="@+id/container_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintTop_toBottomOf="@id/dots_indicator">

        <TextView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_12sdp"
            android:paddingHorizontal="@dimen/_16sdp"
            android:text="@string/back"
            android:textColor="@color/neutral_03"
            android:textSize="@dimen/_18sdp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/next"
            android:textColor="@color/primary"
            android:textSize="@dimen/_18sdp" />
        <TextView
            android:id="@+id/btn_start"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/bg_primary_corner_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/let_start"
            android:textColor="@color/neutral_01"
            android:textSize="@dimen/_20sdp"/>
    </LinearLayout>


<TextView
    android:id="@+id/btn_skip"
    android:layout_marginTop="@dimen/_24sdp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:textSize="@dimen/_14sdp"
    android:textColor="@color/neutral_03"
    android:text="@string/skip_for_now"
    app:layout_constraintTop_toBottomOf="@id/container_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>