<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:background="@color/neutral_03"
    tools:ignore="ContentDescription">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/bg_neu01_corner_10"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imv_delete"
            android:layout_width="@dimen/_44sdp"
            android:layout_height="@dimen/_44sdp"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/ic_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/neutral_04" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:text="@string/delete_confirm"
            android:textColor="@color/neutral_04"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="@id/imv_delete"
            app:layout_constraintStart_toEndOf="@id/imv_delete"
            app:layout_constraintTop_toTopOf="@id/imv_delete" />


        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_instruction"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:textColor="@color/neutral_04"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_delete"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@drawable/bg_neu03_corner_10"
                android:foreground="@drawable/fg_ripple_effect"
                android:gravity="center"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/cancel"
                android:textColor="@color/neutral_01"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toStartOf="@id/btn_delete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/bg_primary_corner_10"
                android:foreground="@drawable/fg_ripple_effect"
                android:gravity="center"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/delete"
                android:textColor="@color/neutral_01"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>