<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="true"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:ignore="ContentDescription">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_neu02_corner_10"
        android:paddingVertical="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:text="@string/bp_note"
            android:textColor="@color/neutral_04"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="@id/btn_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_close" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="@dimen/_44sdp"
            android:layout_height="@dimen/_44sdp"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/ic_exit"
            android:foreground="@drawable/fg_ripple_effect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/btn_close">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"

            app:layout_constraintTop_toBottomOf="@id/rcv_notes">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_edit_add"
                android:layout_width="0dp"
                android:foreground="@drawable/fg_ripple_effect"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@drawable/bg_primary_stroke_corner10"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_8sdp"
                app:layout_constraintEnd_toStartOf="@id/btn_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_edit_add" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_add"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_16sdp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/bg_primary_corner_10"
                android:foreground="@drawable/fg_ripple_effect"
                android:gravity="center"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/save"
                android:textColor="@color/neutral_01"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_edit_add"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>